<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013-2016 The CyanogenMod Project
               (C) 2017 The LineageOS Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- DO NOT TRANSLATE Empty summary for dynamic preferences -->
    <string name="summary_empty" translatable="false"></string>

    <!-- Label for feature switch [CHAR LIMIT=30] -->
    <string name="switch_bar_on">On</string>

    <!-- Label for feature switch [CHAR LIMIT=30] -->
    <string name="switch_bar_off">Off</string>

    <!-- Dialog texts -->
    <string name="dialog_ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>

    <!-- OneplusParts strings -->
    <string name="oneplusparts">OneplusParts</string>
    <string name="oneplusparts_summary">Additional Tweaks</string>

    <!-- Ambient Display -->
    <string name="ambient_display_title">Ambient display</string>
    <string name="ambient_display_gestures_title">Ambient display gestures</string>
    <string name="ambient_display_gestures_summary">Additional gestures to wake the screen</string>
    <string name="ambient_display_always_on_title">Always on</string>
    <string name="ambient_display_always_on_summary">Show time, notification icons, and other info. Increased battery usage.</string>

    <!-- Pickup sensor -->
    <string name="pickup_sensor_title">Pickup sensor</string>

    <!-- Pick-up gesture -->
    <string name="pick_up_gesture_title">Pick-up</string>
    <string name="pick_up_gesture_summary">Pulse notifications on pick-up</string>
    <string name="pick_up_wake_gesture_summary">Wake device on pick-up</string>

    <!-- Generic texts -->
    <string name="disabled">Disabled</string>

    <!-- Help texts -->
    <string name="doze_settings_help_title">Help</string>
    <string name="doze_settings_help_text">These features use sensor events to launch a doze notification pulse. The chosen sensor is only enabled when the device receives a notification, this helps to reduce battery usage. There is also an option to enable the chosen sensor as soon as the screen turns off, this will cause higher battery usage.</string>

    <!-- Screen off Gestures : Input -->
    <string name="touchscreen_gesture_category">Screen OFF Gestures</string>
    <string name="touchscreen_gesture_settings_title">Touchscreen gestures</string>
    <string name="touchscreen_gesture_settings_summary">Perform various touchscreen gestures for quick actions</string>
    <string name="touchscreen_gestures_haptic_feedback_title">Haptic feedback</string>
    <string name="touchscreen_gestures_haptic_feedback_summary">Vibrate when a touchscreen gesture is detected</string>
    <string name="touchscreen_gesture_two_fingers_down_swipe_title">Swipe down with two fingers</string>
    <string name="touchscreen_gesture_one_finger_up_swipe_title">Swipe up with one finger</string>
    <string name="touchscreen_gesture_one_finger_up_swipe_home_title">Swipe up from the home button</string>
    <string name="touchscreen_gesture_one_finger_down_swipe_title">Swipe down with one finger</string>
    <string name="touchscreen_gesture_one_finger_left_swipe_title">Swipe left with one finger</string>
    <string name="touchscreen_gesture_one_finger_right_swipe_title">Swipe right with one finger</string>
    <string name="touchscreen_gesture_single_tap_title">Single tap</string>
    <string name="touchscreen_gesture_up_arrow_title">Draw a \"Λ\"</string>
    <string name="touchscreen_gesture_down_arrow_title">Draw a \"V\"</string>
    <string name="touchscreen_gesture_left_arrow_title">Draw a \"&lt;\"</string>
    <string name="touchscreen_gesture_right_arrow_title">Draw a \"&gt;\"</string>
    <string name="touchscreen_gesture_letter_c_title">Draw the letter \"C\"</string>
    <string name="touchscreen_gesture_letter_e_title">Draw the letter \"e\"</string>
    <string name="touchscreen_gesture_letter_o_title">Draw the letter \"O\"</string>
    <string name="touchscreen_gesture_letter_m_title">Draw the letter \"M\"</string>
    <string name="touchscreen_gesture_letter_s_title">Draw the letter \"S\"</string>
    <string name="touchscreen_gesture_letter_v_title">Draw the letter \"V\"</string>
    <string name="touchscreen_gesture_letter_w_title">Draw the letter \"W\"</string>
    <string name="touchscreen_gesture_letter_z_title">Draw the letter \"Z\"</string>

    <!-- Screen off Gestures : Actions -->
    <string name="touchscreen_gesture_action_dialog_title">Gesture action</string>
    <string name="touchscreen_gesture_action_do_nothing">Do nothing</string>
    <string name="touchscreen_gesture_action_flashlight">Toggle flashlight</string>
    <string name="touchscreen_gesture_action_camera">Open the camera</string>
    <string name="touchscreen_gesture_action_browser">Open the browser</string>
    <string name="touchscreen_gesture_action_dialer">Open the dialer</string>
    <string name="touchscreen_gesture_action_email">View your emails</string>
    <string name="touchscreen_gesture_action_messages">View your messages</string>
    <string name="touchscreen_gesture_action_play_pause_music">Play/pause music</string>
    <string name="touchscreen_gesture_action_previous_track">Play the previous music track</string>
    <string name="touchscreen_gesture_action_next_track">Play the next music track</string>
    <string name="touchscreen_gesture_action_volume_down">Lower media volume</string>
    <string name="touchscreen_gesture_action_volume_up">Raise media volume</string>
    <string name="touchscreen_gesture_action_ambient_display">Show ambient display</string>

    <!-- Vibration Strength -->
    <string name="category_vibrator">Vibrator</string>
    <string name="vib_strength_title_head">Strength</string>
    <string name="vib_strength_summary_head">Define the strength of the vibrator</string>
    <string name="vib_test">Test</string>

    <!-- Dolby -->
    <string name="audio_title">Audio</string>
    <string name="dolby_title">Dolby Atmos</string>
</resources>
