<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2015 The CyanogenMod Project
               (C) 2017-2020 The LineageOS Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceCategory
    android:title="@string/ambient_display_title">

        <PreferenceScreen
            android:key="doze"
            android:icon="@drawable/ic_doze"
            android:fragment="com.oneplusparts.settings.doze.DozeSettingsActivity"
            android:summary="@string/ambient_display_gestures_summary"
            android:title="@string/ambient_display_gestures_title" />

    </PreferenceCategory>

    <PreferenceCategory
    android:title="@string/touchscreen_gesture_category">

        <Preference
            android:key="touchscreen_gesture_category"
            android:title="@string/touchscreen_gesture_settings_title"
            android:summary="@string/touchscreen_gesture_settings_summary"
            android:icon="@drawable/ic_gesture"
            android:persistent="false" >
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="com.oneplusparts.settings"
                    android:targetClass="com.oneplusparts.settings.touch.TouchscreenGestureSettings" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="vibrator"
        android:title="@string/category_vibrator">

        <com.oneplusparts.settings.preference.VibratorStrengthPreference
            android:key="vib_strength"
            android:title="@string/vib_strength_title_head"
            android:summary="@string/vib_strength_summary_head"
            android:persistent="false" />

    </PreferenceCategory>

    <PreferenceCategory
         android:key="audio"
         android:title="@string/audio_title">
         <Preference
             android:key="audio_dolby_atmos"
             android:title="@string/dolby_title"
             android:icon="@drawable/ic_dolby_atmos">
             <intent
                  android:targetPackage="com.oneplus.sound.tuner"
                  android:targetClass="com.oneplus.sound.tuner.panoramic.DolbyPanoramicSoundActivity" />
         </Preference>
     </PreferenceCategory>
</PreferenceScreen>    
